<resources>
    <string name="app_name">SHuSH</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_map">Map</string>
    <string name="menu_measurements">My measurements</string>
    <string name="menu_record">Record</string>
    <string name="menu_time_chart">Time Chart</string>
    <string name="menu_location_chart">Location Chart</string>

    <string name="shared">Shared</string>
    <string name="local">Local</string>

    <string name="dialog_confirmation_message">Are you sure?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>