<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:checked="true"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/measurementFragment"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_measurements" />
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/locationChartFragment"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/menu_location_chart" />
        <item
            android:id="@+id/timeChartFragment"
            android:icon="@drawable/ic_baseline_show_chart_24"
            android:title="@string/menu_time_chart" />
        <item
            android:id="@+id/recordFragment"
            android:icon="@drawable/ic_baseline_keyboard_voice_24"
            android:title="@string/menu_record" />
    </group>
</menu>